# the-walking-teapot

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  objParser.c  objParser.h  teapot  utilities.c  utilities.h
final/: objParser.c
final/teapot/: shader.frag  shader.vert
ground/: shader.frag
perfection/: Makefile  dumb.c  main.c  objParser.c  test.txt  utilities.h
perfection/ground/: shader.frag
perfection/teapot/: shader.frag  shader.vert
perfection/teapot/test/: shader.vert
restart/: Face.hpp  Makefile  Object.cpp  Object.hpp  Scene.cpp  Scene.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  main.cpp  objParser.c
teapot/: shader.frag  shader.vert
teapot/temp/: shader.frag  shader.vert
